--- a/kv/login.kv
+++ b/kv/login.kv
@@ -26,7 +26,7 @@
 
             # App Name
             Label:
-                text: "trackhealth"
+                text: "Login"
                 font_size: '27sp'
                 bold: True
                 color: 0.1, 0.7, 0.5, 1
